          completely black image, regardless of shading (Emanuele Giaquinta).
        - avoid spurious redraws of the bg image when bg is transparent or
          when using 'root' mode (Emanuele Giaquinta).
        - fix build on XFree86.
        - dynamically number option according to compiletime requirements.
          For the extra saved byte. Or so. Yay.

9.09 Sat Nov 13 01:39:07 CET 2010
	- NOTICE: this release updates terminfo/termcap.
	- the bestest release ever.
        - it was verified that urxvt handles µ and μ correctly.
	- add support for blending and blurring with XRender (Emanuele Giaquinta).
	- add support for using gdk-pixbuf as image backend (Emanuele Giaquinta).
	- cleanup and minor fixes of the image code (Emanuele Giaquinta).
	- new perl extension "confirm-paste" (Emanuele Giaquinta).
	- new on_tt_paste perl hook and tt_paste perl binding (Emanuele Giaquinta).
	- new on_bell perl hook (Emanuele Giaquinta).
	- searchable-scrollback no longer ignores the first line
	  (Emanuele Giaquinta).
	- properly set VSTATUS in termios for *BSD (reported by Ed Schouten).
	- fix utmpx detection on upcoming FreeBSD 9.
	- Use COMPOUND_TEXT encoding for WM_NAME/WM_ICON_NAME value when it
	  is not fully convertible to STRING (patch by James Cloos).
        - fix a buffer overflow that would cause wrong key sequences to
          be generated for numpad keys (introduced in 9.05).
        - fix definition of sgr0 to work around limitations in luit.
	- extend ISO 14755 5.4 mode to also print the font name of the
	  characters other than first one in the selected cell
	  (Emanuele Giaquinta).
	- new iso14755 option to disable ISO 14755 at runtime
          (Emanuele Giaquinta).
	- make sure pagewise scrolling scrolls at least one line
          (found by Mikachu).
	- remove deprecated OSC 18 / 19 and make OSC 17 / 19 apply to
	  highlightColor / highlightTextColor (Emanuele Giaquinta).
	- add highlightTextColor resource to change the foreground colour of