@@ -54,6 +54,8 @@ http://ue.tst.eu/71d7dbd1fcfeaa7d2a4b96eb957d570c.txt
         - fix build on XFree86.
         - dynamically number option according to compiletime requirements.
           For the extra saved byte. Or so. Yay.
+        - start options at one, not zero. Wastes a bit per terminal. Maybe.
+          saves 50 instruction bytes. Possibly.
 
 9.09 Sat Nov 13 01:39:07 CET 2010
 	- NOTICE: this release updates terminfo/termcap.
